--- a/rmd/diverse.Rmd
+++ b/rmd/diverse.Rmd
@@ -59,9 +59,9 @@ Are sin oppskrift
 1. Gå inn på http://tos-print-04.hn.helsenord.no/Printers/ipp_0004.asp?eprinter=TOS-UNN-C0.511A-03&view=p&page=1608 med Internett Explorer.
 2. Trykk på *Connect*
 
-## Koble til nettverksstasjonen `\\hn.helsenord.no\unn-avdelinger\skde.avd`
+## Koble til nettverksstasjoner
 
-Av en eller annen grunn må man i noen tilfeller koble til nettverksstasjonen på nytt når man logger seg på maskinen. Da gjør man følgende:
+Av ukjent grunn må man i noen tilfeller koble til nettverksstasjoner på nytt når man logger seg på maskinen. Da gjør man følgende:
 
 - Velg `Verktøy/Koble til nettverksstajon...` i utforskeren
 - Legg inn følgende informasjon
@@ -71,3 +71,19 @@ knitr::include_graphics("figurer/servertilkobling_skde.png")
 ```
 
 Ved å velge en annen stasjon enn `e:` kan man unngå at man må koble seg opp på nytt hver dag.
+
+### Liste over stasjoner
+
+```
+# SKDE
+\\hn.helsenord.no\unn-avdelinger\skde.avd
+
+# Hjemmeområde
+\\hn.helsenord.no\Ansatte\a-and\<brukernavn>
+
+# SAS
+\\tos-sas-skde-01\skde_sas
+\\tos-sas-skde-01\skde_felles
+\\tos-sas-skde-01\SKDE_Analytikere
+\\tos-sas-skde-01\SKDE_Sensetiv
+```
