--- a/rmd/mobiltkontor.Rmd
+++ b/rmd/mobiltkontor.Rmd
@@ -11,6 +11,8 @@ Følgende begrensninger gjelder for PC’er med mobilt kontor:
 
 - SAS
     - Add-ins for Excel
+- Stata
+- SPSS
 - EndNote
     - Add-ins for Word
 - Chrome
@@ -18,14 +20,13 @@ Følgende begrensninger gjelder for PC’er med mobilt kontor:
 - Notepad++
 - [Visual Studio Code](https://code.visualstudio.com/)
 - 7Zip
-- Stata
-- SPSS
 - Eduroam (hvis tilknyttet UiT)
     - installasjonsfil, se https://uit.no/om/orakelet/frag?p_document_id=319282
 - [git](https://git-scm.com/downloads)
 - [R](https://www.r-project.org/)
 - [RStudio](https://www.rstudio.com/products/RStudio)
 - [Python 3](https://www.python.org/downloads/)
+- [MiKTeX](https://miktex.org/)
 
 Kontakt HelpDesk (07022) eller xxx (vi trenger egentlig en spesifikk kontaktperson for dette) for å bestille nye program/tillegg og fyll inn på lista over.
 
