--- a/rmd/diverse.Rmd
+++ b/rmd/diverse.Rmd
@@ -16,6 +16,8 @@ Disse kan ringes opp på følgende måter, med Servicemiljøet som eksempel:
 - Skype for Business: ring *997515@uc.nhn.no*
 - Per telefon: ring *77602100*, slå inn konferanse-ID *997515* og avslutt med *#*
 - For deltagere utenfor helsenettet eller uten Skype for Business: gå til siden https://join.nhn.no/, tast inn navnet ditt, og ring nummer *997515*. Eventuelt gå direkte til https://join.nhn.no/webapp/conference/997515
+  - Denne løsningen kan fungere dårlig med Internet Explorer. Prøv eventuelt Chrome, Safari eller Firefox.
+  - Løsningen fungerer ikke bak brannmuren til Helse Nord.  
 - Videokonferanse over helsenettet: ring *997515*
 
 ## Koble til skriver
