--- a/rmd/diverse.Rmd
+++ b/rmd/diverse.Rmd
@@ -28,16 +28,12 @@ Disse kan ringes opp på følgende måter, med Servicemiljøet som eksempel:
 
 ## Koble til nettverksstasjoner
 
-Av ukjent grunn må man i noen tilfeller koble til nettverksstasjoner på nytt når man logger seg på maskinen. Da gjør man følgende:
+For å koble til nettverksstasjon i Windows 7 gjør man følgende:
 
 - Velg `Verktøy/Koble til nettverksstajon...` i utforskeren
-- Legg inn følgende informasjon
-
-```{r, echo=FALSE}
-knitr::include_graphics("figurer/servertilkobling_skde.png")
-```
-
-Ved å velge en annen stasjon enn `e:` kan man unngå at man må koble seg opp på nytt hver dag.
+- Legg inn stasjon i Feltet *Mappe* (se liste under)
+- Valg av stasjon er irrelevant, men mange bruker `Q:` for `\\hn.helsenord.no\RHF\SKDE`.
+- Velg *Koble til på nytt ved pålogging*
 
 ### Liste over stasjoner
 
