Reorg. r.Rmd; added some about download bundle

--- a/rmd/r.Rmd
+++ b/rmd/r.Rmd
@@ -2,39 +2,6 @@
 
 Hvis det oppstår problemer med noen av disse fremgangsmåtene, send gjerne en beskjed til <A HREF="mailto:&#097;&#114;&#110;&#102;&#105;&#110;&#110;&#046;&#115;&#116;&#101;&#105;&#110;&#100;&#097;&#108;&#064;&#115;&#107;&#100;&#101;&#046;&#110;&#111;">arnfinn</A>.
 
-
-## Rstudio og shinyapps gjennom proxy
-
-
-### Første gang
-
-- Installér shiny-pakken
-```r
-install.packages("shiny")
-```
-- Opprett en bruker på [shinyapps.io](http://www.shinyapps.io)
-- Opprett en ny eller åpne en gammel "Shiny web application" i Rstudio.
-- Kopier din token fra [shinyapps](http://www.shinyapps.io/admin/#/tokens) og kopier over i "Manage Accounts"
-
-```{r, echo=FALSE}
-knitr::include_graphics("figurer/rshiny_5.png")
-```
-
-
-### Laste opp en shinyapp til http://www.shinyapps.io
-
-
-- Dette må gjøres gjennom proxy, så følgende kommandoer må kjøres først
-```r
-options(RCurlOptions = list(proxy = "http://www-proxy.helsenord.no:8080"))
-options(shinyapps.http = "rcurl")
-library(rsconnect)
-```
-- Selve shinyappen lastes opp med følgende kommando
-```r
-deployApp(appName = "tabellverk")
-```
-
 ## Rstudio og github-pakker
 
 R-pakker som ligger på github kan installeres med
@@ -58,21 +25,59 @@ library(httr)
 set_config(use_proxy(url="http://www-proxy.helsenord.no", port=8080))
 ```
 
-## Hvordan opprette en ny Rshiny applikasjon
+## Rstudio og shinyapps
+
+### Første gang
+
+- Installér shiny-pakken
+- Opprett en bruker på [shinyapps.io](http://www.shinyapps.io)
+- Opprett en ny eller åpne en gammel "Shiny web application" i Rstudio.
+- Kopier din token fra [shinyapps](http://www.shinyapps.io/admin/#/tokens) og kopier over i "Manage Accounts"
+
+```{r, echo=FALSE}
+knitr::include_graphics("figurer/rshiny_5.png")
+```
+
+### Laste opp en shinyapp til http://www.shinyapps.io
+
+- Dette må gjøres gjennom proxy hvis man sitter på Helse Nord sitt nett. Følgende kommandoer må da kjøres først:
+
+```r
+options(RCurlOptions = list(proxy = "http://www-proxy.helsenord.no:8080"))
+options(shinyapps.http = "rcurl")
+```
+
+- Selve shinyappen lastes opp med følgende kommando
+
+```r
+rsconnect::deployApp(appName = "<navn>")
+```
+
+### Hvordan opprette en ny Rshiny applikasjon
 
 
 ```{r, echo=FALSE}
 knitr::include_graphics("figurer/rshiny_1.png")
 ```
+
 ```{r, echo=FALSE}
 knitr::include_graphics("figurer/rshiny_2.png")
 ```
+
 ```{r, echo=FALSE}
 knitr::include_graphics("figurer/rshiny_3.png")
 ```
+
 ```{r, echo=FALSE}
 knitr::include_graphics("figurer/rshiny_4.png")
 ```
+
 ```{r, echo=FALSE}
 knitr::include_graphics("figurer/rshiny_5.png")
 ```
+
+### Ta en backup av en eksisterende app
+
+Gå inn på https://www.shinyapps.io/admin/#/dashboard og gå inn på applikasjonssiden. Her kan man laste ned en *Bundle* av appen på *Oveview*-siden.
+
+Hvis man ønsker å dytte opp igjen denne versjonen til shinyapps.io etter at man har lastet den ned, må man først fjerne filen `manifest.json`.
